# autd3-backend-cuda

./: Cargo.toml  LICENSE  Makefile.toml  README.md  build.py  build.rs
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  release.yml
benches/: holo.rs
capi/: Cargo.toml  ThirdPartyNotice.txt  build.rs
capi/src/: lib.rs
cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt  main.cpp
cpp/include/: autd3-backend-cuda.hpp
cpp/tests/: CMakeLists.txt
cpp/tests/gain/holo/: CMakeLists.txt  gs.cpp  gspat.cpp  lm.cpp  naive.cpp  sdp.cpp
cuda_src/: kernel.cu
dotnet/cs/src/NativeMethods/: Base.cs
dotnet/unity/Assets/Scripts/NativeMethods/: Base.cs
examples/: main.rs
python/pyautd3-backend-cuda/native_methods/: capi.py
src/: cusolver.rs  lib.rs
src/cusolver/: linux.rs  mod.rs  win32.rs
tools/license-checker/src/: main.rs
