[package]
name = "autd3-backend-cuda"
version = "28.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license = "MIT"
description = "CUDA Backend for AUTD3"
repository = "https://github.com/shinolab/autd3-backend-cuda"
readme = "README.md"
keywords = ["autd"]

[dependencies]
autd3-driver = { version = "28.0.0" }
autd3-gain-holo = { version = "28.0.0" }
bit-vec = "0.8.0"
cuda-sys = "0.2.0"
nalgebra = { version = "0.33.0", default-features = false, features = ["std"] }
rand = "0.9.0"
thiserror = "2.0.3"

[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
autd3 = "29.0.0"
rstest = "0.24.0"
assert_approx_eq = "1.1.0"
approx = "0.5.1"

[build-dependencies]
cc = "1.1.6"
cuda-config = "0.1.0"

[features]
default = []
async-trait = ["autd3-driver/async-trait", "autd3-gain-holo/async-trait"]
use_meter = []
