[package]
name = "autd3-backend-cuda"
version = "29.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license = "MIT"
description = "CUDA Backend for AUTD3"
repository = "https://github.com/shinolab/autd3-backend-cuda"
readme = "README.md"
keywords = ["autd"]

[dependencies]
autd3-core = { version = "29.0.0", features = ["acoustics", "derive", "gain"] }
autd3-gain-holo = { version = "29.0.0", default-features = false }
cuda-sys = { version = "0.2.0", default-features = false }
nalgebra = { version = "0.33.2", default-features = false, features = ["std"] }
rand = { version = "0.9.0", default-features = false }
thiserror = { version = "2.0.11", default-features = false }


[dev-dependencies]
anyhow = { version = "1.0.95", default-features = false }
autd3 = { version = "29.0.0", default-features = false }
rstest = { version = "0.24.0", default-features = false }
assert_approx_eq = { version = "1.1.0", default-features = false }
approx = { version = "0.5.1", default-features = false }

[build-dependencies]
cc = { version = "1.2.14", default-features = false }
cuda-config = { version = "0.1.0", default-features = false }

[features]
default = []
use_meter = ["autd3-core/use_meter"]
